--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SecondActivity"
+            android:label="@string/about_title_1">
+        </activity>
+        <activity android:name=".CalendarActivity"
+            android:label="@string/about_title_2">
+        </activity>
     </application>
 
 </manifest>
