--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".SecondActivity"
-            android:label="@string/about_title_1">
+            android:label="@string/title_1">
         </activity>
         <activity android:name=".CalendarActivity"
-            android:label="@string/about_title_2">
+            android:label="@string/title_2">
         </activity>
     </application>
 
